added sample age